--- a/MyNodeView/App.xaml
+++ b/MyNodeView/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="CSharp.App"
+﻿<Application x:Class="MyNodeView.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:CSharp"
+             xmlns:local="clr-namespace:MyNodeView"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
