--- a/MyNodeView/MainWindow.xaml
+++ b/MyNodeView/MainWindow.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="CSharp.MainWindow"
+﻿<Window x:Class="MyNodeView.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
-        xmlns:local="clr-namespace:CSharp"
+        xmlns:local="clr-namespace:MyNodeView"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
 
